// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas sobre el componente <GiftGridExperApp/> Debe de mostrar una lista de categorias 1`] = `
<div>
  <h2>
    GiftExperApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="One punch"
      key="One punch"
    />
    <GifGrid
      category="dragon ball"
      key="dragon ball"
    />
  </ol>
</div>
`;

exports[`Pruebas sobre el componente <GiftGridExperApp/> Debe de renderizar el componente correctamente 1`] = `
<div>
  <h2>
    GiftExperApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</div>
`;
